- Fix enable/disable sort button when we select just one cel
- Fix precision when displaying numbers in scientific format
- Fix moving widgets in validity dialog
- Fix in formula dialog when inserting strings as arguments
- Fix compilation, when QT is compiled without SQL framework
- Fix painting of cell content in several cases
  (merging cells, return from edit mode, dragging cell content).


Changes from 1.1 to 1.2
=======================

Since RC1:
----------
Bugfixes:
- Fix display and printout with special files (offset by 1 pixel).
- Fix printout of thick cell borders on page borders
- Fix printout of children, when they overlap one page
- Fix #45967, #31130
- Fix #45944 (Normal): Paste special->text overwrite borders
- Fix #42456 (Normal): merged cells with centered text do not survive insert/delete rows
- Fix #45943 (Crash): crash after "money format"
- Fix function documentation (YEAR(), FACTDOUBLE() )
- Fix parsing and error checking for spreadsheet names.
- Fix #46045 (Normal): serious errors in forumulas
- Fix Embedded chart changes titles when opening again
- Fix #44628 (Grave): 1.1 document not read with 1.2 - circular references
- Fix #40150 (Normal): Precision problem in calculations
- Fix #29524:  KSpread Formula editors tooltip should be changed
- Fix #18083: KSpread rounding error
- Fix #46530: crash on selecting validity
- Fix #45395: Save as HTML is called "mime type"
- Fix #34088: Precision of currency is too low or overflow is handled in a strange way
- Fix #45324: consolidate function result reference area selecting unintuitive

Until RC1:
----------
New:
- Like all of KOffice: a readonly GUI for embedding into Konqueror
- More DCOP calls

Bugfixes:
- bug fixes
- Fix cancel add embedded document.
- Fix mem leak
- Fix copy/paste attribute.
- Fix offset of rotated text in one case (top/middle)

Until beta2:
------------

- bug fixes
- perfomance enhancements
- print functions: